--- a/style.css
+++ b/style.css
@@ -1,43 +1,35 @@
 body {
+    font-family: Arial, sans-serif;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-
-    background-color: #a6ccf3;
+    padding: 20px;
 }
 
-body form input {
-    display: flex;
-}
-
-/*parte de baixo*/
-
-footer {
-    background-color: #003366;
-    margin-top: auto;
-    color: white;
-    margin: 0.6em;
-    display: flex;
-    padding: 1;
-}
-
-footer span {
-    display: flex;
-    margin: 0.6em;
-
-}
-
-form {
-    margin: auto;
-    width: fit-content;
+h1 {
+    color: #333;
     text-align: center;
 }
 
+form {
+    margin-bottom: 20px;
+    display: flex;  
+}
 
-input {
-    height: 2em;
-    border: 1px solid;
+input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+li {
+    background-color: #f4f4f4;
+    padding: 10px;
+    margin-bottom: 10px;
     border-radius: 5px;
+    text-align: center;
 }
